--- a/index.html
+++ b/index.html
@@ -26,15 +26,21 @@
     <link rel="stylesheet" href="./css/style.css" />
 
     <!-- media-query -->
-    <!-- <link rel="stylesheet" href="./media-query.css" /> -->
+    <link rel="stylesheet" href="./css/media-query.css" />
 
     <title>Omnifood</title>
   </head>
   <body>
+    <!-- <input type="checkbox" id="hamb-check" /> -->
     <header class="header">
       <a href="#">
         <img src="./img/omnifood-logo.png" class="logo" alt="omnifood logo" />
       </a>
+      <!-- <div class="hamb-menu">
+        <label for="hamb-check">
+          <span class="hamb-line"></span>
+        </label>
+      </div> -->
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a href="#" class="main-nav-link">How it works</a></li>
@@ -46,6 +52,11 @@
           </li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
 
     <main>
@@ -360,7 +371,7 @@
             </figure>
           </div>
         </div>
-        <div class="gallery grid--3-cols">
+        <div class="gallery">
           <figure class="gallery-item">
             <img
               src="./img/gallery/gallery-1.jpg"
@@ -567,7 +578,7 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form class="cta-form grid--2-cols" action="#">
+              <form class="cta-form" action="#">
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
